--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -477,8 +477,8 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="7nj-DX-WHq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
